<resources>
    <string name="app_name">ViewsDemo</string>
    <string name="square_scaler_view">SquareScalerView</string>
    <string name="circle_rotater_view">CircleRotaterView</string>
    <string name="sketch">sketch</string>
    <string name="bezier2view">Bezier2View</string>
    <string name="bezier3view">Bezier3View</string>
    <string name="control_1">控制点1</string>
    <string name="control_2">控制点2</string>
    <string name="bezier_heart_view">BeizerHeartView</string>
    <string name="show_coordinate_system">Show Coordinate System</string>
    <string name="show_auxiliary_line">Show Auxiliary Line</string>
    <string name="show_again">Show Again</string>
    <string name="arrow_view">ArrowView</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="matrix_set_poly_to_poly_view">MatrixSetPolyToPolyView</string>
    <string name="poly_to_poly_view">PolyToPolyView</string>
    <string name="zero">0</string>
    <string name="rotate_3d">rotate_3d</string>
    <string name="region_click_view">RegionClickView</string>
    <string name="clock_view">ClockView</string>
    <string name="spider_net_view">SpiderNetView</string>
    <string name="sliding_menu">Sliding Menu</string>
    <string name="cancel_top">cancel top</string>
    <string name="top">top</string>
    <string name="long_click">Long Click</string>
    <string name="other_information">other information</string>
</resources>
