<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/square_scaler_view"
        android:title="@string/square_scaler_view"
        />

    <item
        android:id="@+id/circle_rotater_view"
        android:title="@string/circle_rotater_view"
        />

    <item
        android:id="@+id/sketch"
        android:title="@string/sketch"
        />

    <item
        android:id="@+id/bezier_2_view"
        android:title="@string/bezier2view"
        />

    <item
        android:id="@+id/bezier_3_view"
        android:title="@string/bezier3view"
        />

    <item
        android:id="@+id/bezier_heart_view"
        android:title="@string/bezier_heart_view"/>

    <item
        android:id="@+id/arrow_view"
        android:title="@string/arrow_view"/>

    <item
        android:id="@+id/matrix_set_poly_to_poly_view"
        android:title="@string/matrix_set_poly_to_poly_view"/>

    <item
        android:id="@+id/poly_to_poly_view"
        android:title="@string/poly_to_poly_view"/>

    <item
        android:id="@+id/rotate_3d_image_view"
        android:title="@string/rotate_3d"/>

    <item
        android:id="@+id/region_click_view"
        android:title="@string/region_click_view"/>

    <item
        android:id="@+id/clock_view"
        android:title="@string/clock_view"/>

    <item
        android:id="@+id/spider_net_view"
        android:title="@string/spider_net_view"/>
</menu>