<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eddada"
    android:orientation="vertical">

    <com.innofang.viewsdemo.views.PolyToPolyView
        android:id="@+id/poly_to_poly_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/point_zero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/zero"/>

        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/point_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"/>

        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/point_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"/>

        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/point_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"/>

        <View
            android:layout_width="20dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/point_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"/>
    </RadioGroup>
</LinearLayout>